--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.17.2",
     "mongoose": "^6.1.10",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "stripe": "^8.207.0"
   }
