login API Error

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^6.1.10",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
+    "razorpay": "^2.8.0",
     "stripe": "^8.207.0"
   }
 }
